--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ text-align: center;
   flex-direction: column;
   width: 100%;
   overflow: hidden;
-  padding: 0 5px;
+  padding: 0 10px;
  }
 
 .card-description {
@@ -556,7 +556,7 @@ font-weight: 700;
 .card-title {
   white-space: nowrap;
   text-overflow: ellipsis;
-  margin: 0;
+  margin-top: 15px;
  }
 
   .card-subtitle{
